# phylanx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  appveyor.yml  circle.yml  index.html  pr.py
examples/: CMakeLists.txt  InitMatrix.py  oscop_matmul.py  phyast.py
examples/algorithms/: CMakeLists.txt  als.cpp  als.py  als_csv.cpp  als_csv_instrumented.cpp  dotprod.py  gauss_algo.py  kmeans.physl  kmeans.py  lir_csv.cpp  lra.cpp  lra_csv.cpp  lra_csv.py  lra_csv_instrumented.cpp  lra_csv_phyfun.py  lra_csv_phyfun_np.py  lu_algo.py  pca.py  phylanx_als_csv.py  phylanx_lir_csv.py  phylanx_lra_csv.py  phylanx_lra_csv_np.py  phylanx_newton.py  prange_test.py  qr_algo.py  tsne.py
examples/algorithms/als/: CMakeLists.txt  aks_csv_distributed.cpp  als.cpp  als.physl  als.py  als_Y.cpp  als_csv.cpp  als_csv_distributed.cpp  als_csv_instrumented.cpp  als_distributed_test.cpp  als_lra_test.cpp  als_test.cpp  als_test_segfault.cpp  phylanx_als_csv.py
examples/algorithms/datasets/: README  als_small.csv  docword.kos.train.mat  docword.nips.train.mat
examples/algorithms/dot_product/: dotprod.py
examples/algorithms/kmeans/: CMakeLists.txt  README.md  kmeans.cpp  kmeans.numpy.py  kmeans.phylanx.py  kmeans.physl  kmeans_fix_points.cpp  kmeans_fix_points.numpy.py  kmeans_fix_points.phylanx.py  kmeans_fix_points_3d.cpp
examples/algorithms/lda/: lda_trainer.py  lda_trainer_phylanx.py  ldahyper.py  main.cpp  main_physl.cpp  np_ldahyper.py  physl_ldahyper.py  simple_lda.py
examples/algorithms/lir/: CMakeLists.txt  lir.cpp  lir.py  lir_csv.cpp
examples/algorithms/lra/: CMakeLists.txt  lra.cpp  lra_csv.cpp  lra_csv_distributed.cpp  lra_csv_instrumented.cpp  lra_dist.cpp  phylanx_lra_csv.py  phylanx_lra_csv_np.py
examples/algorithms/nn/: CMakeLists.txt  nn.cpp  nn.py  nn_csv.cpp  nn_csv_numpy.py  nn_csv_phylanx.physl  nn_csv_phylanx.py  nn_python.py  phylanx_nn_csv_np.py
examples/algorithms/pca/: pca.py
examples/algorithms/qr/: qr_algo.py
examples/algorithms/randomforest/: CMakeLists.txt  np_randomforest.py  phylanx_randomforest.py  randomforest.cpp  randomforest.py  simple_randomforest.cpp
examples/algorithms/simple_lda/: simple_lda.py
examples/algorithms/tsne/: tsne.py
examples/ast/: CMakeLists.txt  generate.cpp  transform.cpp  traverse.cpp  traverse_ast.cpp
examples/ast/tree_traversal/: TypeDeducer.py  get_type.py  numpy_output_type.py  test_typeDeducer.py  visit_assign.py
examples/distributed/: CMakeLists.txt  multipart.cpp
examples/interpreter/: CMakeLists.txt  als.physl  factorial.physl  fibonacci.physl  interpreter.cpp  lra.physl  mul2add.physlrules  physl.cpp  qr_decomp.physl
examples/profiling/: CMakeLists.txt  primitive_instrumentation.cpp
python/src/: CMakeLists.txt  init_hpx.cpp  init_hpx.hpp  phylanx.cpp
python/src/bindings/: ast.cpp  binding_helpers.cpp  binding_helpers.hpp  execution_tree.cpp  ostream.hpp  type_casters.hpp  util.cpp  variable.cpp  variable.hpp
src/: CMakeLists.txt  version.cpp
src/ast/: generate_ast.cpp  generate_transform_rules.cpp  node.cpp  transform_ast.cpp
src/ast/detail/: is_function_call.cpp  is_identifier.cpp  is_literal_value.cpp  is_placeholder.cpp  is_placeholder_ellipses.cpp  tagged_id.cpp
src/ast/parser/: expression.cpp
src/execution_tree/: annotation.cpp  compile.cpp  compiler_component.cpp  generate_tree.cpp  localities_annotation.cpp  locality_annotation.cpp  meta_annotation.cpp  patterns.cpp  tiling_annotations.cpp
src/execution_tree/compiler/: actors.cpp  compiler.cpp  compiler_component.cpp  locality_attribute.cpp  parse_primitive_name.cpp  primitive_name.cpp
src/execution_tree/primitives/: access_argument.cpp  access_function.cpp  access_variable.cpp  add_dimension.cpp  add_operation.cpp  all_operation.cpp  and_operation.cpp  annotate_primitive.cpp  any_operation.cpp  apply.cpp  apply_operation.cpp  argmax.cpp  argmin.cpp  assert_condition.cpp  base_primitive.cpp  base_primitives.cpp  block_operation.cpp  call_function.cpp  car_cdr_operation.cpp  car_cdr_operation.cpp.orig  column_set.cpp  constant.cpp  (+103 more)
src/ir/: dictionary.cpp  node_data.cpp  ranges.cpp  slice_node_data.cpp
src/performance_counters/: register_counters.cpp
src/plugins/: CMakeLists.txt  load_plugins.cpp  support_components.cpp
src/primitives/: add_operation.cpp  base_primitives.cpp
src/python/: CMakeLists.txt  phylanx.cpp
src/util/: apex_direct_vs_nondirect_policy.cpp  command_line_options.cpp  generate_error_message.cpp  hashed_string.cpp  none_manip.cpp  performance_data.cpp  random.cpp  repr_manip.cpp  slicing_helpers.cpp  startup_shutdown.cpp
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  blaze_benchmarks.cpp  conv1d_dist_instrumented.cpp  conv1d_dist_test.physl  conv1d_instrumented.cpp  dist_cannon.cpp  dist_cannon_16_loc.cpp  dist_cannon_4_loc.cpp  dist_cannon_9_loc.cpp  dist_conv1d.cpp  dist_dot.cpp  dist_mat_mul.cpp  distributed_mat_mult.cpp  simple_loop.cpp  test_conv1d.physl  test_conv1d_instrumented.cpp
tests/regressions/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tools/: CMakeLists.txt  check_help.py
tools/VS/: Eigen.natvis  ast.natvis  blaze.natvis  extended_variant.natvis  hashed_string.natvis  optional.natvis  primitive.natvis  primitive_argument_type.natvis  range.natvis  recursive_wrapper.natvis  variant.natvis
tools/check_help/: check_help.py
tools/circleci/: check_test_coverage.py  install.sh
tools/docker/: Dockerfile  Dockerfile.post  install.sh
tools/flake8/: config.ini  flake_to_junit.py
tools/inspect/: CMakeLists.txt  apple_macro_check.cpp  ascii_check.cpp  assert_macro_check.cpp  copyright_check.cpp  crlf_check.cpp  deprecated_include_check.cpp  deprecated_macro_check.cpp  deprecated_name_check.cpp  end_check.cpp  endline_whitespace_check.cpp  function_hyper.hpp  include_check.cpp  inspect.cpp  inspect_to_junit.py  inspector.hpp  length_check.cpp  license_check.cpp  link_check.cpp  minmax_check.cpp  path_name_check.cpp  tab_check.cpp  unnamed_namespace_check.cpp
tools/vim/: .ycm_extra_conf.py  Readme
tools/vscode/: launch.json  settings.json
(+1541 files in other folders)
